stderr
JudgeMan.java:71: error: cannot find symbol
            case ($pairStack >= 2):
                  ^
  symbol:   variable $pairStack
  location: class JudgeMan
1 error
